
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int fflush (int ) ;
 int fp ;
 int fprintf (int ,char*,...) ;
 int printf (char*,...) ;

void PrintPayLoad(char *lpBuff, int buffsize)
{
   int i;
   for(i=0;i<buffsize;i+=2)
   {
       if((i%16)==0)
       {
           if(i!=0)
           {
               printf("\"\n\"");
               fprintf(fp, "%s", "\" +\n\"");
           }
           else
           {
               printf("\"");
               fprintf(fp, "%s", "\"");
           }
       }

       printf("%%u%0.4x",((unsigned short*)lpBuff)[i/2]);

       fprintf(fp, "%%u%0.4x",((unsigned short*)lpBuff)[i/2]);
     }


       printf("\";\n");
       fprintf(fp, "%s", "\");\n");


   fflush(fp);
}
